Major clean Up. Fixed default date for the calendar

--- a/public/styles_c3.css
+++ b/public/styles_c3.css
@@ -1,5 +1,5 @@
 /*-- Chart --*/
-
+/*-- Here are defined all the styles written for the graph. Change this according to your needs. -- */
 .c3 svg {
   font: 10px sans-serif;
 }
